# gagnon2021-Deformable-Lapped-Textures

./: .gitmodules  CMakeLists.txt  README.md  package.py
HoudiniPlugin/TexturingFluids/: CMakeLists.txt
HoudiniPlugin/TexturingFluids/Approaches/: AtlasInterface.cpp  AtlasInterface.h  Gagnon2019AtlasSynthesis.cpp  Gagnon2019AtlasSynthesis.h  LagrangianTextureAdvection.cpp  LagrangianTextureAdvection.h  PoissonDiskInterface.cpp  PoissonDiskInterface.h
HoudiniPlugin/TexturingFluids/Core/: DeformableGridsManager.cpp  DeformableGridsManager.h  DeformableSurfaceManager.cpp  DeformableSurfaceManager.h  ParticleTrackerManager.h
HoudiniPlugin/TexturingFluids/HoudiniInterfaces/: LagrangianTextureAdvection.cpp  LagrangianTextureAdvection.h  PoissonDiskInterface.cpp  SinglePatchInterface.cpp  Yu2011Interface.h
HoudiniPlugin/TexturingFluids/HoudiniPlugins/: AtlasPlugin.cpp  AtlasPlugin.h  AtlasSeamCarvingPlugin.cpp  AtlasSeamCarvingPlugin.h  HoudiniPluginsDescriptions.cpp  PoissonDiskPlugin.h  SinglePatchTest.h  Yu2011Plugin.cpp  Yu2011Plugin.h
HoudiniPlugin/TexturingFluids/Tests/: SinglePatchInterface.cpp  SinglePatchInterface.h
HoudiniPlugin/build-texturingfluids-Desktop-Default/: CMakeCache.txt  Gagnon2019.cbp  Makefile  cmake_install.cmake  sesitag_input
HoudiniPlugin/build-yu2011-Desktop-Default/: .ninja_deps  .ninja_log  build.ninja  rules.ninja
HoudiniPlugin/cmake/: FindANN.cmake  FindHDK.cmake
HoudiniPlugin/otl/: dambreak.hda  patch.hda  yu2011.dambreak.hda  yu2011.hda  yu2011.river.hda  yu2011viscousdrop.hda
HoudiniPlugin/texturingfluids/: CMakeLists.txt  atlas.csv  core.csv
HoudiniPlugin/texturingfluids/Approaches/: AtlasAnimatedTextureInterface.cpp  AtlasAnimatedTextureInterface.h  AtlasDeformablePatchesInterface.cpp  AtlasDeformablePatchesInterface.h  AtlasGagnon2016Synthesis.cpp  AtlasGagnon2016Synthesis.h  AtlasInterface.cpp  DeformableLappedTexture.cpp  DeformableLappedTexture.h  DynamicLappedTexture.cpp  DynamicLappedTexture.h  LagrangianTextureAdvection.cpp  PoissonDiskInterface.cpp  PoissonDiskInterface.h  SinglePatchInterface.cpp  Yu2011Interface.cpp
HoudiniPlugin/texturingfluids/Core/: Bridson2012PoissonDiskDistribution.cpp  Bridson2012PoissonDiskDistribution.h  DeformableGridsManager.cpp  HoudiniUtils.h  (+12 more)
HoudiniPlugin/yu2011/: CMakeLists.txt
HoudiniPlugin/yu2011/Core/: BestMatchFunctions.cpp  BestMatchFunctions.h  Bridson2007PoissonDiskDistribution.cpp  Bridson2007PoissonDiskDistribution.h  BuildingNeighborhoodFunctions.cpp  BuildingNeighborhoodFunctions.h  DeformableGridsManager.h  GaussianPyramidMesh.cpp  GaussianPyramidMesh.h  HoudiniUtils.cpp  HoudiniUtils.h  KwatraSurfaceTextureSynthesis.cpp  KwatraSurfaceTextureSynthesis.h  KwatraSurfaceTextureSynthesisParams.cpp  KwatraSurfaceTextureSynthesisParams.h  KwatraTextureSynthesis.cpp  KwatraTextureSynthesis.h  KwatraTextureSynthesisParams.cpp  KwatraTextureSynthesisParams.h  LagrangianTextureAdvection.h  ParticleTrackerManager.cpp  Primitive.h  Vertex.h  WeyAndLevoyStructure.cpp  WeyAndLevoyStructure.h
HoudiniPlugin/yu2011/Core/Atlas/: Atlas.h  Blending.h  BlendingGagnon2016.cpp  BlendingGagnon2016.h  BlendingYu2011.cpp  BlendingYu2011.h  HoudiniAtlas.cpp  HoudiniAtlas.h  TBBAtlas.h
HoudiniPlugin/yu2011/Core/Deformations/: DistortionManager.cpp  DistortionManager.h  DistortionUtils.cpp  DistortionUtils.h  LocalDeformationDistortion.cpp  LocalDeformationDistortion.h  ParametersDeformablePatches.h  ParametersDistortion.h  Yu2011Distortion.cpp  Yu2011Distortion.h
HoudiniPlugin/yu2011/HoudiniInterfaces/: AtlasInterface.cpp  AtlasInterface.h  PoissonDiskInterface.cpp  PoissonDiskInterface.h  SinglePatchInterface.cpp  SinglePatchInterface.h  Yu2011Interface.cpp  Yu2011Interface.h
HoudiniPlugin/yu2011/HoudiniPlugins/: AtlasPlugin.cpp  AtlasPlugin.h  AtlasSeamCarvingPlugin.cpp  AtlasSeamCarvingPlugin.h  HoudiniPluginsDescriptions.cpp  PoissonDiskPlugin.cpp  PoissonDiskPlugin.h  SinglePatchTest.cpp  SinglePatchTest.h  Yu2011Plugin.cpp  Yu2011Plugin.h
HoudiniPlugin/yu2011/Images/: Color.h  ImageVolumetric.h
HoudiniPlugin/yu2011/Math/: Vec3.h  triangle.cpp  triangle.h
HoudiniPlugin/yu2011/PoissonDisk/: Bridson2012PoissonDiskDistribution.cpp  Bridson2012PoissonDiskDistribution.h  PoissonDisk.cpp  PoissonDisk.h  PoissonDiskDistribution.cpp  PoissonDiskDistribution.h  TreeDGrid.cpp  TreeDGrid.h
HoudiniPlugin/yu2011/Set/: SpatialGrid.h  SpatialGrid.hpp
HoudiniPlugin/yu2011/Strategies/: StrategyPatchSurfaceSynthesis.h  StrategySurfaceTextureSynthesis.h  StrategyTextureSynthesis.h
HoudiniPlugin/yu2011/Strategies/StrategyPatchSurfaceSynthesis/: DeformableGrids.cpp  DeformableGrids.h  DeformableGridsManager.cpp  DeformableGridsManager.h  DeformablePatches.cpp  DeformablePatches.h  DynamicLappedTexture.cpp  DynamicLappedTexture.h  LagrangianTextureAdvection.cpp  LagrangianTextureAdvection.h  ParticleTracker.cpp  ParticleTracker.h  ParticleTrackerManager.cpp  ParticleTrackerManager.h  Yu2011.cpp  Yu2011.h
assets/: animated_patches_atlas.hda  deformable_lapped_patches.hda  deformable_patches.hda  deformable_patches_atlas.hda  dynamic_lapped_texture.hda  dynamic_lapped_texture_atlas.hda  viscousdrop.hip
results/: dambreak_core.csv  dambreak_core.xlsx  lava_core.csv  splitandmerge_core.csv  splitandmerge_core.xlsx  viscousdrop_core.csv
setup/: setenvironment.sh
setup/rez/: CMakeLists.txt  package.py
shots/: 2DFluidComparison.hip  atlas.csv  collision_low_res.bgeo  dambreak.hip  kwatra2007_sphere_dambreak.hip  kwatra2007_sphere_dambreak_fluidsim.hip  singlepatchanimation.hip  texturingfluid_dambreak_fx_mixedstones_v004_jgagnon.hip  texturingfluid_dambreak_fx_pebbles_v005_jgagnon.hip  texturingfluid_singlepatch_fx_pebbles_v029_jgagnon.hip  texturingfluid_viscousdrop_fx_animatedlappedtexture_v003_jgagnon.hip  texturingfluid_viscousdrop_fx_animatedlappedtexture_v017_jgagnon.hip  texturingfluid_viscousdrop_fx_animatedlappedtexture_v032_jgagnon.hip  velocityfield.bgeo  viscousdrop.hip  yusplitflow.hip
shots/splity/: atlas.csv  collision.bgeo  collision_low_res.bgeo  core.csv  velocityfield.bgeo
(+81 files in other folders)
